--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 <body>
     <main>
         <header>
-            <h1>Título do site</h1>
+            <h1>Cursos Grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto Artigo 001</p>
+            <h2>Curso de HTML5 e CCS 3</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa adipisci quo voluptatem, odit officia dolorem odio porro autem ipsam enim alias quibusdam, id cumque placeat esse beatae, rem sunt vel.</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto Artigo 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam officiis aperiam, id temporibus labore impedit repellat numquam veniam totam modi tempora sapiente voluptatum necessitatibus doloribus blanditiis, ipsa et, saepe optio.</p>
         </article>
     </main>
 </body>
